[package]
name = "tc-stream"
version = "0.1.0"
authors = ["haydn@tinychain.net"]
edition = "2018"
description = "Tinychain's generic Stream traits and types. Unstable."
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/haydnv/tinychain.git"

keywords = ["tinychain", "functional", "stream"]
categories = ["asynchronous", "concurrency"]

[dependencies]
async-trait = "0.1"
destream = "0.5"
futures = "0.3"
pin-project = "1.0"
tc-error = { path = "../error" }
tc-transact = { path = "../transact" }
tcgeneric = { path = "../generic" }
