[package]
name = "tc-table"
version = "0.1.9"
authors = ["haydn@tinychain.net"]
edition = "2018"
description = "TinyChain's Table collection type. Unstable."
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/haydnv/tinychain.git"

keywords = ["tinychain", "table", "collection"]
categories = ["database", "database-implementations", "data-structures"]

[dependencies]
async-trait = "0.1"
collate = "~0.1.9"
destream = "0.5"
futures = "0.3"
log = { version = "0.4", features = ["release_max_level_warn"] }
num_cpus = "1.13"
safecast = "0.1"
tc-btree = "~0.2.2"
tc-error = "~0.3.1"
tc-transact = "~0.9.1"
tc-value = "~0.2.3"
tcgeneric = "~0.2.4"
