[package]
name = "tc-table"
version = "0.4.0"
authors = ["haydn@tinychain.net"]
edition = "2018"
description = "TinyChain's Table collection type"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/haydnv/tinychain.git"

keywords = ["tinychain", "table", "collection"]
categories = ["database", "database-implementations", "data-structures"]

[dependencies]
async-trait = "0.1"
collate = "~0.1.9"
destream = "0.5"
futures = "0.3"
log = { version = "0.4", features = ["release_max_level_warn"] }
num_cpus = "1.13"
safecast = "0.1"
tc-btree = { path = "../btree" }
tc-error = { path = "../error" }
tc-transact = { path = "../transact" }
tc-value = { path = "../value" }
tcgeneric = { path = "../generic" }
