[package]
name = "tc-tensor"
version = "0.7.0"
authors = ["haydn@tinychain.net"]
edition = "2018"
description = "TinyChain's Tensor collection type"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/haydnv/tinychain.git"

keywords = ["tinychain", "tensor", "gpu", "ml", "parallel"]
categories = ["concurrency", "data-structures", "hardware-support", "mathematics"]

[dependencies]
afarray = "~0.14.3"
arrayfire = "3.8"
async-trait = "0.1"
collate = { version = "~0.2.3", features=["complex"] }
destream = "0.5"
futures = "0.3"
itertools  = "0.10"
log = { version = "0.4", features = ["release_max_level_warn"] }
num_cpus = "1.13"
pin-project = "1.0"
safecast = "~0.1.2"
strided = "~0.2.9"
tc-error = "0.6"
tc-transact = { version = "0.14", features = ["tensor"] }
tc-value = "0.7"
tc-table = "0.6"
tcgeneric = "0.5"
