[package]
name = "tc-transact"
version = "0.17.0"
authors = ["code@tinychain.net"]
edition = "2021"
description = "Traits and locking utilities for a TinyChain transaction."
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/haydnv/tinychain.git"

keywords = ["tinychain", "transaction", "executor"]
categories = ["concurrency", "data-structures"]

[dependencies]
async-hash = { path = "../../../async-hash" }
async-trait = "0.1"
destream = "0.7"
futures = "0.3"
freqfs = { path = "../../../freqfs", features = ["all"] }
get-size = "0.1"
get-size-derive = "0.1"
log = { version = "0.4", features = ["release_max_level_info"] }
num_cpus = "1.15"
rand = "0.8"
safecast = "0.2"
sha2 = "0.10"
tcgeneric = { path = "../generic" }
tc-error = { path = "../error" }
tc-value = { path = "../value" }
tokio = { version = "1.33", features = ["sync"] }
txfs = { path = "../../../txfs", features = ["logging"] }
txn_lock = { path = "../../../txn_lock", features = ["logging"] }
