[package]
name = "tc-transact"
version = "0.19.0"
authors = ["code@tinychain.net"]
edition = "2021"
description = "Traits and locking utilities for a TinyChain transaction."
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/haydnv/tinychain.git"

keywords = ["tinychain", "transaction", "executor"]
categories = ["concurrency", "data-structures"]

[dependencies]
async-hash = "0.5"
async-trait = "0.1"
destream = "0.7"
futures = "0.3"
freqfs = { version = "0.9", features = ["all"] }
get-size = "0.1"
get-size-derive = "0.1"
log = { version = "0.4", features = ["release_max_level_info"] }
num_cpus = "1.16"
rand = "0.8"
safecast = "0.2"
sha2 = "0.10"
tc-error = { path = "../error" }
tc-value = { path = "../value" }
tcgeneric = { path = "../generic" }
tokio = { version = "1.35", features = ["sync"] }
txfs = { version = "0.2", features = ["logging"] }
txn_lock = { version = "0.8", features = ["logging"] }
