[package]
name = "tc-transact"
version = "0.21.0"
authors = ["code@tinychain.net"]
edition = "2021"
description = "Traits and locking utilities for a TinyChain transaction."
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/haydnv/tinychain.git"

keywords = ["tinychain", "transaction", "executor"]
categories = ["concurrency", "data-structures"]

[dependencies]
async-hash = "0.5"
async-trait = "0.1"
destream = "0.8"
futures = "0.3"
freqfs = { version = "0.10", features = ["all"] }
get-size = "0.1"
get-size-derive = "0.1"
log = { version = "0.4", features = ["release_max_level_info"] }
num_cpus = "1.16"
rand = "0.8"
safecast = "0.2"
sha2 = "0.10"
tc-error = { version = "0.12", features = ["txn_lock", "txfs"] }
tc-value = "0.13"
tcgeneric = "0.11"
tokio = { version = "1.39", features = ["sync"] }
txfs = { version = "0.4", features = ["logging"] }
txn_lock = { version = "0.10", features = ["logging"] }
